--- a/i3/desktop/config
+++ b/i3/desktop/config
@@ -14,7 +14,7 @@
 font pango:monospace 8
 
 # class                 border  bground text    indicator child_border
-client.focused          #4C7899 #333333 #FFFFFF #2E9EF4   #285577
+client.focused          #222222 #333333 #FFFFFF #2E9EF4   #333333
 client.focused_inactive #333333 #5F676A #FFFFFF #484E50   #5F676A
 client.unfocused        #333333 #222222 #888888 #292D2E   #222222
 client.urgent           #2F343A #900000 #FFFFFF #900000   #900000
