--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -47,7 +47,7 @@ blur-kern = "3x3box"
 #backend = "xrender"
 backend = "glx"
 
-vsync = false
+vsync = true
 #vsync = false
 # dbus = false
 mark-wmwin-focused = true
@@ -72,14 +72,16 @@ detect-client-leader = true
 # Performance
 glx-no-stencil = true
 glx-no-rebind-pixmap = true
-glx-swap-method = "exchange"
+# DEPRECATED for use-damage
+#glx-swap-method = "exchange"
+use-damage = false
+
 unredir-if-possible = true
 # unredir-if-possible-delay = 0
 # unredir-if-possible-exclude = []
 
 
 # no-use-damage = false
-use-damage = true
 
 # xrender-sync-fence = false
 
