--- a/i3/laptop/config
+++ b/i3/laptop/config
@@ -1,34 +1,12 @@
-# i3 config file (v4)
-#
-# Please see https://i3wm.org/docs/userguide.html for a complete reference!
-#
-# This config file uses keycodes (bindsym) and was written for the QWERTY
-# layout.
-#
-# To get a config file with the same key positions, but for your current
-# layout, use the i3-config-wizard
-#
+# Font for window titles (and bar unless specified in bar {}
+font pango:Source Code Pro 8
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:monospace 8
+# Use xss-lock to listen to X events and transfer locking to i3lock
+# This locks the screen before suspending
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -c 000000 --nofork
 
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so
-# they are included here as an example. Modify as you see fit.
-
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
+# Manual lock
 bindsym Ctrl+L exec i3lock -c 000000
-
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -44,9 +22,6 @@ set $down k
 set $left j
 set $right semicolon
 
-#set $mod Mod4
-#set $Super_L Mod4
-
 # use Mouse+Mod4 to drag floating windows to their wanted position
 floating_modifier Mod4
 
@@ -58,10 +33,6 @@ bindsym Mod4+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym Mod4+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym Mod4+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym Mod4+$left focus left
@@ -167,11 +138,6 @@ bindsym Mod4+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
         bindsym $left       resize shrink width 10 px or 10 ppt
         bindsym $down       resize grow height 10 px or 10 ppt
         bindsym $up         resize shrink height 10 px or 10 ppt
@@ -192,7 +158,6 @@ mode "resize" {
 bindsym Mod4+r mode "resize"
 
 # Multimedia keys
-
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
 
@@ -203,4 +168,7 @@ bar {
 
 #######################################################################
 exec setxkbmap se &
-exec sleep 2 && xrandr --dpi 160 && ~/.screenlayout/default.sh &
+exec picom -b --experimental-backends &
+exec sleep 2 && ~/.screenlayout/default.sh &
+exec sleep 4 && feh --bg-scale /home/svag/wallpapers/dark-minimal.jpg
+exec sleep 4 && xrandr --dpi 166 &
