--- a/i3/laptop/config
+++ b/i3/laptop/config
@@ -172,3 +172,5 @@ exec picom -b --experimental-backends &
 exec sleep 2 && ~/.screenlayout/default.sh &
 exec sleep 4 && feh --bg-scale /home/svag/wallpapers/dark-minimal.jpg
 exec sleep 4 && xrandr --dpi 166 &
+
+exec aa-notify -p -s 1 -w 60 -f /var/log/audit/audit.log &
