--- a/i3/laptop/config
+++ b/i3/laptop/config
@@ -166,11 +166,18 @@ bar {
         status_command SCRIPT_DIR=~/.i3blocks i3blocks
 }
 
-#######################################################################
+#################################
+
+# X keymap
 exec setxkbmap se &
+
+# Screen stuff
 exec picom -b --experimental-backends &
 exec sleep 2 && ~/.screenlayout/default.sh &
-exec sleep 4 && feh --bg-scale /home/svag/wallpapers/dark-minimal.jpg
+exec sleep 4 && feh --bg-scale ~/wallpapers/dark-minimal.jpg
 exec sleep 4 && xrandr --dpi 166 &
 
+# Desktop notifications
+exec /usr/bin/dunst &
+# Apparmor notifications
 exec aa-notify -p -s 1 -w 60 -f /var/log/audit/audit.log &
