--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -14,18 +14,18 @@ shadow-exclude = []
 
 # Fading
 fading = false
-fade-in-step = 0.2
-fade-out-step = 0.2
+fade-in-step = 0.1
+fade-out-step = 0.1
 # fade-delta = 10
 # fade-exclude = []
 no-fading-openclose = false
 # no-fading-destroyed-argb = false
 
 # Opacity
-inactive-opacity = 1.0
+active-opacity = 0.95
+inactive-opacity = 0.95
 frame-opacity = 1.0
 inactive-opacity-override = false
-active-opacity = 1.0
 # inactive-dim = 0.0
 focus-exclude = []
 # inactive-dim-fixed = 1.0
@@ -44,8 +44,8 @@ blur-kern = "3x3box"
 # System
 # daemon = false
 # backend = 'glx'
-#backend = "xrender"
-backend = "glx"
+backend = "xrender"
+#backend = "glx"
 
 vsync = true
 #vsync = false
@@ -96,7 +96,7 @@ unredir-if-possible = true
 # transparent-clipping = false
 
 log-level = "warn"
-log-file = "/var/log/picom.log"
+#log-file = "/var/log/picom.log"
 # show-all-xerrors = false
 # write-pid-path = '/path/to/your/log/file'
 
